[tool.poetry]
name = "ml_project_tmp"
version = "0.1.0"
description = ""
authors = ["Lumpen1999 <66263068+Lumpen1999@users.noreply.github.com>"]
license = "CC0"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.2"
scikit-learn = "^1.2.0"
mlflow = "^2.0.1"
hydra-core = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
